[project]
name = "zre"
version = "0.1.0"
description = "ZRE naive autotune"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "scipy>=1.15.2",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.8",
]
